[be] tag:chat 기능 리팩토링
